--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
 		<div class="content-inner">
 			<div class="light-gallery">
 
-				<a class="lg-item" style="width:100%;" data-src="img/work/msi_fanday/top-1600.jpg">
+				<a class="cbox" style="width:100%;" href="img/work/msi_fanday/top-1600.jpg">
 					<img src="img/work/msi_fanday/top-1280.jpg" />
 				</a>
 				<div class="content-info-outer">
@@ -19,19 +19,19 @@
 					</div>
 				</div>
 				<div class="inner-image">
-					<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/msi_fanday/flyer-1280.jpg">
+					<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/flyer-1280.jpg">
 						<img src="img/work/msi_fanday/flyer-960.jpg" />
 					</a>
 				</div>
 
 				<div class="inner-image">
-					<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/msi_fanday/social-1080.jpg">
+					<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/social-1080.jpg">
 						<img src="img/work/msi_fanday/social-960.jpg" />
 					</a>
 				</div>
 
 				<div class="inner-image">
-					<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/msi_fanday/eblast-960.jpg">
+					<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/eblast-960.jpg">
 						<img src="img/work/msi_fanday/eblast-960.jpg" />
 					</a>
 				</div>
@@ -54,7 +54,7 @@
 		<div class="content-inner">
 			<div class="light-gallery">
 
-				<a class="lg-item" style="width:100%;" data-src="img/work/bh_comic/bh_comic-1600.jpg">
+				<a class="cbox" style="width:100%;" href="img/work/bh_comic/bh_comic-1600.jpg">
 					<img src="img/work/bh_comic/bh_comic-1280.jpg" />
 				</a>
 
@@ -71,7 +71,7 @@
 				</div>
 
 
-				<a class="lg-item" style="width:100%;" data-src="img/work/bh_comic/bh_comic_progress-1920.jpg">
+				<a class="cbox" style="width:100%;" href="img/work/bh_comic/bh_comic_progress-1920.jpg">
 					<img src="img/work/bh_comic/bh_comic_progress-1280.jpg" />
 				</a>
 
@@ -102,7 +102,7 @@
 	<div class="rich-overlay-content">
 		<div class="content-inner">
 			<div class="light-gallery">
-				<a class="lg-item" style="width:100%;" data-src="img/work/reach_brand/mock-1600.jpg">
+				<a class="cbox" style="width:100%;" href="img/work/reach_brand/mock-1600.jpg">
 					<img src="img/work/reach_brand/mock-1280.jpg" />
 				</a>
 				<div class="content-info-outer">
@@ -118,12 +118,12 @@
 
 				<div class="clearfix inner-image" style="padding-bottom:0;">
 					<div style="width:49%; float:left;">
-						<a class="lg-item" data-src="img/work/reach_brand/in-1600.jpg">
+						<a class="cbox" href="img/work/reach_brand/in-1600.jpg">
 							<img src="img/work/reach_brand/in-640.jpg" />
 						</a>
 					</div>
 					<div style="width:49%; float:right; ">
-						<a class="lg-item" data-src="img/work/reach_brand/out-1600.jpg">
+						<a class="cbox" href="img/work/reach_brand/out-1600.jpg">
 							<img src="img/work/reach_brand/out-640.jpg" />
 						</a>
 					</div>
@@ -158,7 +158,7 @@
 		<div class="content-inner">
 			<div class="light-gallery">
 
-				<a class="lg-item" style="width:100%;" data-src="img/work/dino_poster/dino_poster-1600.jpg">
+				<a class="cbox" style="width:100%;" href="img/work/dino_poster/dino_poster-1600.jpg">
 					<img src="img/work/dino_poster/dino_poster-1280.jpg" />
 				</a>
 				<div class="content-info-outer">
@@ -171,7 +171,7 @@
 					</div>
 				</div>
 				<div class="inner-image">
-					<a class="lg-item white-border" style="width:100%;" data-src="img/work/dino_poster/dino_poster-1600-bw.jpg">
+					<a class="cbox white-border" style="width:100%;" href="img/work/dino_poster/dino_poster-1600-bw.jpg">
 						<img src="img/work/dino_poster/dino_poster-1280-bw.jpg" />
 					</a>
 				</div>
@@ -184,7 +184,7 @@
 
 		<div class="content-inner">
 			<div class="light-gallery">
-				<a class="lg-item" style="width:100%;" data-src="img/work/reach_flyers/open_mic_mock-1600.jpg">
+				<a class="cbox" style="width:100%;" href="img/work/reach_flyers/open_mic_mock-1600.jpg">
 					<img src="img/work/reach_flyers/open_mic_mock-1280.jpg" />
 				</a>
 
@@ -200,24 +200,24 @@
 					</div>
 				</div>
 				<div class="inner-image">
-					<a class="lg-item" style="width:100%;" data-src="img/work/reach_flyers/open_mic-1600.jpg">
+					<a class="cbox" style="width:100%;" href="img/work/reach_flyers/open_mic-1600.jpg">
 						<img src="img/work/reach_flyers/open_mic-1280.jpg" />
 					</a>
 				</div>
 				<div class="clearfix inner-image">
 					<div style="width:49%; float:left;">
-						<a class="lg-item white-border" data-src="img/work/reach_flyers/boy-1600.jpg">
+						<a class="cbox white-border" href="img/work/reach_flyers/boy-1600.jpg">
 							<img src="img/work/reach_flyers/boy-640.jpg" />
 						</a>
 					</div>
 					<div style="width:49%; float:right; ">
-						<a class="lg-item white-border" data-src="img/work/reach_flyers/girl-1600.jpg">
+						<a class="cbox white-border" href="img/work/reach_flyers/girl-1600.jpg">
 							<img src="img/work/reach_flyers/girl-640.jpg" />
 						</a>
 					</div>
 				</div>
 				<div class="inner-image">
-					<a class="lg-item white-border" style="width:100%;" data-src="img/work/reach_flyers/fyaw-1600.jpg">
+					<a class="cbox white-border" style="width:100%;" href="img/work/reach_flyers/fyaw-1600.jpg">
 						<img src="img/work/reach_flyers/fyaw-1280.jpg" />
 					</a>
 				</div>
@@ -232,7 +232,7 @@
 		<div class="content-inner">
 			<div class="light-gallery">
 
-				<a class="lg-item" style="width:100%;" data-src="img/work/water_shirt/water_shirt_mockup-1600.jpg">
+				<a class="cbox" style="width:100%;" href="img/work/water_shirt/water_shirt_mockup-1600.jpg">
 					<img src="img/work/water_shirt/water_shirt_mockup-1280.jpg" />
 				</a>
 				<div class="content-info-outer">
@@ -244,10 +244,11 @@
 						</p>
 					</div>
 				</div>
-
-				<a class="lg-item" style="width:100%;" data-src="img/work/water_shirt/water_shirt-1600.jpg">
-					<img src="img/work/water_shirt/water_shirt-1280.jpg" />
-				</a>
+				<div class="inner-image">
+					<a class="cbox" style="width:100%;" href="img/work/water_shirt/water_shirt-1600.jpg">
+						<img src="img/work/water_shirt/water_shirt-1280.jpg" />
+					</a>
+				</div>
 
 			</div>
 		</div>
