return focus false, clear lb

--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 		<title>Rich Huynh - Designer + Developer</title>
 
 
-		<!--LightGallery-->
+		<!--ColorBox-->
 		<link href="css/vendor/font-awesome.css" rel="stylesheet" />
 		<link href="css/vendor/colorbox.css" rel="stylesheet" />
-
-
 
 
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
@@ -54,7 +52,7 @@
 					</button>
 
 				-->
-				
+
 					<button class="gallery-button" onclick="richOverlay.open(0);">
 						<div class="label-overlay">
 							<div class="label">
@@ -129,11 +127,6 @@
 
 		<!--ColorBox-->
 		<script src="js/vendor/jquery.colorbox-min.js"></script>
-
-		<!--LightGallery
-		<script src="js/vendor/jquery.mousewheel.min.js"></script>
-		<script src="js/vendor/picturefill.min.js"></script>
-		<script src="js/vendor/lightgallery-all.js"></script>-->
 
 		<!--Site JS-->
 		<script type="text/javascript" src="js/site.js"></script>
