--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		<script src="js/vendor/hammer-time.min.js"></script>
 
 		<!--ColorBox-->
-		<script src="js/vendor/jquery.colorbox-min.js"></script>
+		<script src="js/vendor/jquery.colorbox.js"></script>
 
 		<!--Site JS-->
 		<script type="text/javascript" src="js/site.js"></script>
