--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
 
 			</main>
 
+			<footer>
+				<nav class="nav-social cf">
+					<a target="_blank" href="https://www.linkedin.com/in/richhuynh">
+						<i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+					</a>
+					<a target="_blank" href="https://github.com/richhuynhyo">
+						<i class="fa fa-github-square fa-2x" aria-hidden="true"></i>
+					</a>
+				</nav>
+			</footer>
+
 
 
 
