Add lucky stickers

--- a/index.html
+++ b/index.html
@@ -53,7 +53,17 @@
 
 				-->
 
-					<button class="gallery-button" onclick="richOverlay.open(0);">
+				<button class="gallery-button" onclick="richOverlay.open(6);">
+					<div class="label-overlay">
+						<div class="label">
+							<h1>Lucky Stickers</h1>
+							<h2>Animated GIFs</h2>
+						</div>
+					</div>
+					<img src="img/gallery/lucky-sticker.jpg" />
+				</button>
+
+					<button class="gallery-button" onclick="richOverlay.open(5);">
 						<div class="label-overlay">
 							<div class="label">
 								<h1>Fan Day</h1>
@@ -63,7 +73,7 @@
 						<img src="img/gallery/msi-fanday.jpg" />
 					</button>
 
-					<button class="gallery-button" onclick="richOverlay.open(1);">
+					<button class="gallery-button" onclick="richOverlay.open(4);">
 						<div class="label-overlay">
 							<div class="label">
 								<h1>Smash the Competition</h1>
@@ -74,7 +84,7 @@
 					</button>
 
 
-					<button class="gallery-button" onclick="richOverlay.open(2);">
+					<button class="gallery-button" onclick="richOverlay.open(3);">
 						<div class="label-overlay">
 							<div class="label">
 								<h1>REACH</h1>
@@ -85,7 +95,7 @@
 					</button>
 
 
-					<button class="gallery-button" onclick="richOverlay.open(3);">
+					<button class="gallery-button" onclick="richOverlay.open(2);">
 						<div class="label-overlay">
 							<div class="label">
 								<h1>Eon</h1>
@@ -94,7 +104,7 @@
 						</div>
 						<img src="img/gallery/dino-poster.jpg" />
 					</button>
-					<button class="gallery-button" onclick="richOverlay.open(4);">
+					<button class="gallery-button" onclick="richOverlay.open(1);">
 						<div class="label-overlay">
 							<div class="label">
 								<h1>REACH</h1>
@@ -103,7 +113,7 @@
 						</div>
 						<img src="img/gallery/reach-flyers.jpg" />
 					</button>
-					<button class="gallery-button" onclick="richOverlay.open(5);">
+					<button class="gallery-button" onclick="richOverlay.open(0);">
 						<div class="label-overlay">
 							<div class="label">
 								<h1>Water</h1>
