--- a/work.html
+++ b/work.html
@@ -1,49 +1,30 @@
 <html>
 
+
+
 	<div class="rich-overlay-content">
 
 		<div class="content-inner">
 			<div class="light-gallery">
 
-				<a class="cbox" style="width:100%;" href="img/work/msi_fanday/top-1600.jpg">
-					<img src="img/work/msi_fanday/top-1280.jpg" />
+				<a class="cbox" style="width:100%;" href="img/work/water_shirt/water_shirt_mockup-1600.jpg">
+					<img src="img/work/water_shirt/water_shirt_mockup-1280.jpg" />
 				</a>
 				<div class="content-info-outer">
 					<div class="content-info">
-						<h1>MSI Fan Day</h1>
-						<h2>Graphic Design, Digital Illustration - MSI</h2>
+						<h1>Water</h1>
+						<h2>Digital Illustration - Personal Project</h2>
 						<p>
-							I was tasked with designing a set of event marketing materials for MSI Fan Day in partnership with NEX Navy Exchange.
-							I digitally illustrated a comic-inspired battleship and applied it to a flyer, social media post, and eblast.
+							This is a digitally-illustrated t-shirt graphic with environmental messaging.
 						</p>
 					</div>
 				</div>
 				<div class="inner-image">
-					<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/flyer-1280.jpg">
-						<img src="img/work/msi_fanday/flyer-960.jpg" />
+					<a class="cbox" style="width:100%;" href="img/work/water_shirt/water_shirt-1600.jpg">
+						<img src="img/work/water_shirt/water_shirt-1280.jpg" />
 					</a>
 				</div>
 
-				<div class="inner-image">
-					<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/social-1080.jpg">
-						<img src="img/work/msi_fanday/social-960.jpg" />
-					</a>
-				</div>
-
-				<div class="inner-image">
-					<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/eblast-960.jpg">
-						<img src="img/work/msi_fanday/eblast-960.jpg" />
-					</a>
-				</div>
-
-			</div>
-		</div>
-		<div class="content-footer-outer">
-			<div class="content-footer">
-				<p class="note">
-					MSI gaming dragon shield logo, laptops photos, and laptop model name logos are trademarks of MSI.
-					NEX Navy Exchange logo is a trademark of United States Navy under the Navy Exchange Service Command.
-				</p>
 			</div>
 		</div>
 	</div>
@@ -51,52 +32,81 @@
 
 
 	<div class="rich-overlay-content">
+
 		<div class="content-inner">
 			<div class="light-gallery">
-
-				<a class="cbox" style="width:100%;" href="img/work/bh_comic/bh_comic-1600.jpg">
-					<img src="img/work/bh_comic/bh_comic-1280.jpg" />
+				<a class="cbox" style="width:100%;" href="img/work/reach_flyers/open_mic_mock-1600.jpg">
+					<img src="img/work/reach_flyers/open_mic_mock-1280.jpg" />
 				</a>
 
 				<div class="content-info-outer">
 					<div class="content-info">
-						<h1>Smash the Competition</h1>
-						<h2>Graphic Design, Digital Illustration - MSI</h2>
+						<h1>REACH : Event Flyers</h1>
+						<h2>Graphic Design, Digital Illustration - Mt.SAC REACH</h2>
 						<p>
-							I was tasked with creating a comic-inspired poster highlighting unique features of MSI's new 9th Gen Intel<sup>&reg;</sup> Series
-							gaming laptops for the B&H Photo store. The features highlighted are the GE Raider's front cover RGB Lighting,
-							GS65's cooling, and GT75's performance power.
+							I helped created a number of marketing flyers for the Mt.SAC REACH Foster Youth program.
+							The flyers were digitally illustrated with bright, warm colors and custom hand-drawn typography.
+							The goal was to convey event information with a fun, energetic tone for a young adult audience.
 						</p>
 					</div>
 				</div>
-
-
-				<a class="cbox" style="width:100%;" href="img/work/bh_comic/bh_comic_progress-1920.jpg">
-					<img src="img/work/bh_comic/bh_comic_progress-1280.jpg" />
-				</a>
-
-				<div class="content-info-outer">
-					<div class="content-info">
-						<p>
-							The project intially required just the single laptop, but it eventually grew to require three.
-							The color pallet also shifted from of an homage to retro comics to a brighter, more modern color pallet.
-							Lastly, the "laser" effect on the GE Raider was changed to less obscure the actual RGB lighting on the product.
-						</p>
+				<div class="inner-image">
+					<a class="cbox" style="width:100%;" href="img/work/reach_flyers/open_mic-1600.jpg">
+						<img src="img/work/reach_flyers/open_mic-1280.jpg" />
+					</a>
+				</div>
+				<div class="clearfix inner-image">
+					<div style="width:49%; float:left;">
+						<a class="cbox white-border" href="img/work/reach_flyers/boy-1600.jpg">
+							<img src="img/work/reach_flyers/boy-640.jpg" />
+						</a>
+					</div>
+					<div style="width:49%; float:right; ">
+						<a class="cbox white-border" href="img/work/reach_flyers/girl-1600.jpg">
+							<img src="img/work/reach_flyers/girl-640.jpg" />
+						</a>
 					</div>
 				</div>
+				<div class="inner-image">
+					<a class="cbox white-border" style="width:100%;" href="img/work/reach_flyers/fyaw-1600.jpg">
+						<img src="img/work/reach_flyers/fyaw-1280.jpg" />
+					</a>
+				</div>
 
-			</div>
-		</div>
-		<div class="content-footer-outer">
-			<div class="content-footer">
-				<p class="note">
-					MSI gaming dragon shield logo, laptops photos, and laptop model name logos are trademarks of MSI.
-					Intel<sup>&reg;</sup> Core logo is a trademark of Intel Corporation.
-					NVIDIA<sup>&reg;</sup> GTX logo is a trademark of NVIDIA.
-				</p>
 			</div>
 		</div>
 	</div>
+
+
+	<div class="rich-overlay-content">
+
+		<div class="content-inner">
+			<div class="light-gallery">
+
+				<a class="cbox" style="width:100%;" href="img/work/dino_poster/dino_poster-1600.jpg">
+					<img src="img/work/dino_poster/dino_poster-1280.jpg" />
+				</a>
+				<div class="content-info-outer">
+					<div class="content-info">
+						<h1>Eon</h1>
+						<h2>Digital Illustration - Personal Project</h2>
+						<p>
+							This is a 24" x 48" poster that I digitally illustrated on a Wacom Cintiq with Photoshop.
+						</p>
+					</div>
+				</div>
+				<div class="inner-image">
+					<a class="cbox white-border" style="width:100%;" href="img/work/dino_poster/dino_poster-1600-bw.jpg">
+						<img src="img/work/dino_poster/dino_poster-1280-bw.jpg" />
+					</a>
+				</div>
+
+			</div>
+		</div>
+	</div>
+
+
+
 
 
 	<div class="rich-overlay-content">
@@ -153,104 +163,183 @@
 	</div>
 
 
-	<div class="rich-overlay-content">
 
-		<div class="content-inner">
-			<div class="light-gallery">
 
-				<a class="cbox" style="width:100%;" href="img/work/dino_poster/dino_poster-1600.jpg">
-					<img src="img/work/dino_poster/dino_poster-1280.jpg" />
-				</a>
-				<div class="content-info-outer">
-					<div class="content-info">
-						<h1>Eon</h1>
-						<h2>Digital Illustration - Personal Project</h2>
-						<p>
-							This is a 24" x 48" poster that I digitally illustrated on a Wacom Cintiq with Photoshop.
-						</p>
-					</div>
-				</div>
-				<div class="inner-image">
-					<a class="cbox white-border" style="width:100%;" href="img/work/dino_poster/dino_poster-1600-bw.jpg">
-						<img src="img/work/dino_poster/dino_poster-1280-bw.jpg" />
+		<div class="rich-overlay-content">
+			<div class="content-inner">
+				<div class="light-gallery">
+
+					<a class="cbox" style="width:100%;" href="img/work/bh_comic/bh_comic-1600.jpg">
+						<img src="img/work/bh_comic/bh_comic-1280.jpg" />
 					</a>
-				</div>
 
+					<div class="content-info-outer">
+						<div class="content-info">
+							<h1>Smash the Competition</h1>
+							<h2>Graphic Design, Digital Illustration - MSI</h2>
+							<p>
+								I was tasked with creating a comic-inspired poster highlighting unique features of MSI's new 9th Gen Intel<sup>&reg;</sup> Series
+								gaming laptops for the B&H Photo store. The features highlighted are the GE Raider's front cover RGB Lighting,
+								GS65's cooling, and GT75's performance power.
+							</p>
+						</div>
+					</div>
+
+
+					<a class="cbox" style="width:100%;" href="img/work/bh_comic/bh_comic_progress-1920.jpg">
+						<img src="img/work/bh_comic/bh_comic_progress-1280.jpg" />
+					</a>
+
+					<div class="content-info-outer">
+						<div class="content-info">
+							<p>
+								The project intially required just the single laptop, but it eventually grew to require three.
+								The color pallet also shifted from of an homage to retro comics to a brighter, more modern color pallet.
+								Lastly, the "laser" effect on the GE Raider was changed to less obscure the actual RGB lighting on the product.
+							</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+			<div class="content-footer-outer">
+				<div class="content-footer">
+					<p class="note">
+						MSI gaming dragon shield logo, laptops photos, and laptop model name logos are trademarks of MSI.
+						Intel<sup>&reg;</sup> Core logo is a trademark of Intel Corporation.
+						NVIDIA<sup>&reg;</sup> GTX logo is a trademark of NVIDIA.
+					</p>
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<div class="rich-overlay-content">
 
-		<div class="content-inner">
-			<div class="light-gallery">
-				<a class="cbox" style="width:100%;" href="img/work/reach_flyers/open_mic_mock-1600.jpg">
-					<img src="img/work/reach_flyers/open_mic_mock-1280.jpg" />
-				</a>
 
-				<div class="content-info-outer">
-					<div class="content-info">
-						<h1>REACH : Event Flyers</h1>
-						<h2>Graphic Design, Digital Illustration - Mt.SAC REACH</h2>
-						<p>
-							I helped created a number of marketing flyers for the Mt.SAC REACH Foster Youth program.
-							The flyers were digitally illustrated with bright, warm colors and custom hand-drawn typography.
-							The goal was to convey event information with a fun, energetic tone for a young adult audience.
-						</p>
-					</div>
-				</div>
-				<div class="inner-image">
-					<a class="cbox" style="width:100%;" href="img/work/reach_flyers/open_mic-1600.jpg">
-						<img src="img/work/reach_flyers/open_mic-1280.jpg" />
+
+
+		<div class="rich-overlay-content">
+
+			<div class="content-inner">
+				<div class="light-gallery">
+
+					<a class="cbox" style="width:100%;" href="img/work/msi_fanday/top-1600.jpg">
+						<img src="img/work/msi_fanday/top-1280.jpg" />
 					</a>
-				</div>
-				<div class="clearfix inner-image">
-					<div style="width:49%; float:left;">
-						<a class="cbox white-border" href="img/work/reach_flyers/boy-1600.jpg">
-							<img src="img/work/reach_flyers/boy-640.jpg" />
+					<div class="content-info-outer">
+						<div class="content-info">
+							<h1>MSI Fan Day</h1>
+							<h2>Graphic Design, Digital Illustration - MSI</h2>
+							<p>
+								I was tasked with designing a set of event marketing materials for MSI Fan Day in partnership with NEX Navy Exchange.
+								I digitally illustrated a comic-inspired battleship and applied it to a flyer, social media post, and eblast.
+							</p>
+						</div>
+					</div>
+					<div class="inner-image">
+						<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/flyer-1280.jpg">
+							<img src="img/work/msi_fanday/flyer-960.jpg" />
 						</a>
 					</div>
-					<div style="width:49%; float:right; ">
-						<a class="cbox white-border" href="img/work/reach_flyers/girl-1600.jpg">
-							<img src="img/work/reach_flyers/girl-640.jpg" />
+
+					<div class="inner-image">
+						<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/social-1080.jpg">
+							<img src="img/work/msi_fanday/social-960.jpg" />
 						</a>
 					</div>
-				</div>
-				<div class="inner-image">
-					<a class="cbox white-border" style="width:100%;" href="img/work/reach_flyers/fyaw-1600.jpg">
-						<img src="img/work/reach_flyers/fyaw-1280.jpg" />
-					</a>
-				</div>
 
+					<div class="inner-image">
+						<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/eblast-960.jpg">
+							<img src="img/work/msi_fanday/eblast-960.jpg" />
+						</a>
+					</div>
+
+				</div>
+			</div>
+			<div class="content-footer-outer">
+				<div class="content-footer">
+					<p class="note">
+						MSI gaming dragon shield logo, laptops photos, and laptop model name logos are trademarks of MSI.
+						NEX Navy Exchange logo is a trademark of United States Navy under the Navy Exchange Service Command.
+					</p>
+				</div>
 			</div>
 		</div>
-	</div>
 
 
-	<div class="rich-overlay-content">
 
-		<div class="content-inner">
-			<div class="light-gallery">
+			<div class="rich-overlay-content">
 
-				<a class="cbox" style="width:100%;" href="img/work/water_shirt/water_shirt_mockup-1600.jpg">
-					<img src="img/work/water_shirt/water_shirt_mockup-1280.jpg" />
-				</a>
-				<div class="content-info-outer">
-					<div class="content-info">
-						<h1>Water</h1>
-						<h2>Digital Illustration - Personal Project</h2>
-						<p>
-							This is a digitally-illustrated t-shirt graphic with environmental messaging.
+				<div class="content-inner">
+					<div class="light-gallery">
+						<!--
+						<a class="cbox" style="width:100%;" href="img/work/water_shirt/water_shirt_mockup-1600.jpg">
+							<img src="img/work/water_shirt/water_shirt_mockup-1280.jpg" />
+						</a>-->
+						<div class="content-info-outer">
+							<div class="content-info">
+								<h1>Lucky Stickers</h1>
+								<h2>Animation, After Effects - MSI</h2>
+								<p>
+									Using Photoshop and After Effects, I converted still graphics of MSI's Lucky into
+									a series of animated social media "stickers".
+
+								</p>
+							</div>
+						</div>
+						<div class="inner-image">
+							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/1.gif">
+								<img src="img/work/lucky_sticker/1.webp" />
+							</a>
+						</div>
+						<div class="inner-image">
+							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/2.gif">
+								<img src="img/work/lucky_sticker/2.webp" />
+							</a>
+						</div>
+						<div class="inner-image">
+							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/3.gif">
+								<img src="img/work/lucky_sticker/3.webp" />
+							</a>
+						</div>
+						<div class="inner-image">
+							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/4.gif">
+								<img src="img/work/lucky_sticker/4.webp" />
+							</a>
+						</div>
+						<div class="inner-image">
+							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/5.gif">
+								<img src="img/work/lucky_sticker/5.webp" />
+							</a>
+						</div>
+						<div class="inner-image">
+							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/6.gif">
+								<img src="img/work/lucky_sticker/6.webp" />
+							</a>
+						</div>
+						<div class="inner-image">
+							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/7.gif">
+								<img src="img/work/lucky_sticker/7.webp" />
+							</a>
+						</div>
+						<div class="inner-image">
+							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/8.gif">
+								<img src="img/work/lucky_sticker/8.webp" />
+							</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="content-footer-outer">
+					<div class="content-footer">
+						<p class="note">
+							MSI gaming Lucky character graphics and company logos are trademarks of MSI.
 						</p>
 					</div>
 				</div>
-				<div class="inner-image">
-					<a class="cbox" style="width:100%;" href="img/work/water_shirt/water_shirt-1600.jpg">
-						<img src="img/work/water_shirt/water_shirt-1280.jpg" />
-					</a>
-				</div>
-
 			</div>
-		</div>
-	</div>
+
+
+
+
 </html>
