reset back to lightgallery, remove buggy features

--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
 		<title>Rich Huynh - Designer + Developer</title>
 
 
-		<!--ColorBox-->
+		<!--LightGallery-->
+		<link href="css/vendor/font-awesome.css" rel="stylesheet" />
+		<link href="css/vendor/lightgallery.css" rel="stylesheet" />
+		<link href="css/vendor/lg-fb-comment-box.css" rel="stylesheet" />
+		<link href="css/vendor/lg-transitions.css" rel="stylesheet" />
+
+		<!--ColorBox-
 		<link href="css/vendor/font-awesome.css" rel="stylesheet" />
 		<link href="css/vendor/colorbox.css" rel="stylesheet" />
-
+		-->
 
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 		<link type="text/css" rel="stylesheet" href="css/style.css" />
@@ -146,8 +152,14 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 		<script src="js/vendor/hammer-time.min.js"></script>
 
-		<!--ColorBox-->
-		<script src="js/vendor/jquery.colorbox.js"></script>
+		<!--LightGallery-->
+		<script src="js/vendor/jquery.mousewheel.min.js"></script>
+		<script src="js/vendor/picturefill.min.js"></script>
+		<script src="js/vendor/lightgallery-all.js"></script>
+
+
+		<!--ColorBox
+		<script src="js/vendor/jquery.colorbox.js"></script>-->
 
 		<!--Site JS-->
 		<script type="text/javascript" src="js/site.js"></script>
