--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
 		<div class="content-inner">
 			<div class="light-gallery">
 
-				<a class="cbox" style="width:100%;" href="img/work/water_shirt/water_shirt_mockup-1600.jpg">
+				<a class="lg-item" style="width:100%;" data-src="img/work/water_shirt/water_shirt_mockup-1600.jpg">
 					<img src="img/work/water_shirt/water_shirt_mockup-1280.jpg" />
 				</a>
 				<div class="content-info-outer">
@@ -20,7 +20,7 @@
 					</div>
 				</div>
 				<div class="inner-image">
-					<a class="cbox" style="width:100%;" href="img/work/water_shirt/water_shirt-1600.jpg">
+					<a class="lg-item" style="width:100%;" data-src="img/work/water_shirt/water_shirt-1600.jpg">
 						<img src="img/work/water_shirt/water_shirt-1280.jpg" />
 					</a>
 				</div>
@@ -35,7 +35,7 @@
 
 		<div class="content-inner">
 			<div class="light-gallery">
-				<a class="cbox" style="width:100%;" href="img/work/reach_flyers/open_mic_mock-1600.jpg">
+				<a class="lg-item" style="width:100%;" data-src="img/work/reach_flyers/open_mic_mock-1600.jpg">
 					<img src="img/work/reach_flyers/open_mic_mock-1280.jpg" />
 				</a>
 
@@ -51,24 +51,24 @@
 					</div>
 				</div>
 				<div class="inner-image">
-					<a class="cbox" style="width:100%;" href="img/work/reach_flyers/open_mic-1600.jpg">
+					<a class="lg-item" style="width:100%;" data-src="img/work/reach_flyers/open_mic-1600.jpg">
 						<img src="img/work/reach_flyers/open_mic-1280.jpg" />
 					</a>
 				</div>
 				<div class="clearfix inner-image">
 					<div style="width:49%; float:left;">
-						<a class="cbox white-border" href="img/work/reach_flyers/boy-1600.jpg">
+						<a class="lg-item white-border" data-src="img/work/reach_flyers/boy-1600.jpg">
 							<img src="img/work/reach_flyers/boy-640.jpg" />
 						</a>
 					</div>
 					<div style="width:49%; float:right; ">
-						<a class="cbox white-border" href="img/work/reach_flyers/girl-1600.jpg">
+						<a class="lg-item white-border" data-src="img/work/reach_flyers/girl-1600.jpg">
 							<img src="img/work/reach_flyers/girl-640.jpg" />
 						</a>
 					</div>
 				</div>
 				<div class="inner-image">
-					<a class="cbox white-border" style="width:100%;" href="img/work/reach_flyers/fyaw-1600.jpg">
+					<a class="lg-item white-border" style="width:100%;" data-src="img/work/reach_flyers/fyaw-1600.jpg">
 						<img src="img/work/reach_flyers/fyaw-1280.jpg" />
 					</a>
 				</div>
@@ -83,7 +83,7 @@
 		<div class="content-inner">
 			<div class="light-gallery">
 
-				<a class="cbox" style="width:100%;" href="img/work/dino_poster/dino_poster-1600.jpg">
+				<a class="lg-item" style="width:100%;" data-src="img/work/dino_poster/dino_poster-1600.jpg">
 					<img src="img/work/dino_poster/dino_poster-1280.jpg" />
 				</a>
 				<div class="content-info-outer">
@@ -96,7 +96,7 @@
 					</div>
 				</div>
 				<div class="inner-image">
-					<a class="cbox white-border" style="width:100%;" href="img/work/dino_poster/dino_poster-1600-bw.jpg">
+					<a class="lg-item white-border" style="width:100%;" data-src="img/work/dino_poster/dino_poster-1600-bw.jpg">
 						<img src="img/work/dino_poster/dino_poster-1280-bw.jpg" />
 					</a>
 				</div>
@@ -112,7 +112,7 @@
 	<div class="rich-overlay-content">
 		<div class="content-inner">
 			<div class="light-gallery">
-				<a class="cbox" style="width:100%;" href="img/work/reach_brand/mock-1600.jpg">
+				<a class="lg-item" style="width:100%;" data-src="img/work/reach_brand/mock-1600.jpg">
 					<img src="img/work/reach_brand/mock-1280.jpg" />
 				</a>
 				<div class="content-info-outer">
@@ -128,12 +128,12 @@
 
 				<div class="clearfix inner-image" style="padding-bottom:0;">
 					<div style="width:49%; float:left;">
-						<a class="cbox" href="img/work/reach_brand/in-1600.jpg">
+						<a class="lg-item" data-src="img/work/reach_brand/in-1600.jpg">
 							<img src="img/work/reach_brand/in-640.jpg" />
 						</a>
 					</div>
 					<div style="width:49%; float:right; ">
-						<a class="cbox" href="img/work/reach_brand/out-1600.jpg">
+						<a class="lg-item" data-src="img/work/reach_brand/out-1600.jpg">
 							<img src="img/work/reach_brand/out-640.jpg" />
 						</a>
 					</div>
@@ -169,7 +169,7 @@
 			<div class="content-inner">
 				<div class="light-gallery">
 
-					<a class="cbox" style="width:100%;" href="img/work/bh_comic/bh_comic-1600.jpg">
+					<a class="lg-item" style="width:100%;" data-src="img/work/bh_comic/bh_comic-1600.jpg">
 						<img src="img/work/bh_comic/bh_comic-1280.jpg" />
 					</a>
 
@@ -186,7 +186,7 @@
 					</div>
 
 
-					<a class="cbox" style="width:100%;" href="img/work/bh_comic/bh_comic_progress-1920.jpg">
+					<a class="lg-item" style="width:100%;" data-src="img/work/bh_comic/bh_comic_progress-1920.jpg">
 						<img src="img/work/bh_comic/bh_comic_progress-1280.jpg" />
 					</a>
 
@@ -222,7 +222,7 @@
 			<div class="content-inner">
 				<div class="light-gallery">
 
-					<a class="cbox" style="width:100%;" href="img/work/msi_fanday/top-1600.jpg">
+					<a class="lg-item" style="width:100%;" data-src="img/work/msi_fanday/top-1600.jpg">
 						<img src="img/work/msi_fanday/top-1280.jpg" />
 					</a>
 					<div class="content-info-outer">
@@ -236,19 +236,19 @@
 						</div>
 					</div>
 					<div class="inner-image">
-						<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/flyer-1280.jpg">
+						<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/msi_fanday/flyer-1280.jpg">
 							<img src="img/work/msi_fanday/flyer-960.jpg" />
 						</a>
 					</div>
 
 					<div class="inner-image">
-						<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/social-1080.jpg">
+						<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/msi_fanday/social-1080.jpg">
 							<img src="img/work/msi_fanday/social-960.jpg" />
 						</a>
 					</div>
 
 					<div class="inner-image">
-						<a class="cbox white-border" style="width:100%; max-width:960px;" href="img/work/msi_fanday/eblast-960.jpg">
+						<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/msi_fanday/eblast-960.jpg">
 							<img src="img/work/msi_fanday/eblast-960.jpg" />
 						</a>
 					</div>
@@ -272,7 +272,7 @@
 				<div class="content-inner">
 					<div class="light-gallery">
 						<!--
-						<a class="cbox" style="width:100%;" href="img/work/water_shirt/water_shirt_mockup-1600.jpg">
+						<a class="lg-item" style="width:100%;" data-src="img/work/water_shirt/water_shirt_mockup-1600.jpg">
 							<img src="img/work/water_shirt/water_shirt_mockup-1280.jpg" />
 						</a>-->
 						<div class="content-info-outer">
@@ -287,42 +287,42 @@
 							</div>
 						</div>
 						<div class="inner-image">
-							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/1.gif">
+							<a class="lg-item" style="width:100%;" data-src="img/work/lucky_sticker/1.gif">
 								<img src="img/work/lucky_sticker/1.webp" />
 							</a>
 						</div>
 						<div class="inner-image">
-							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/2.gif">
+							<a class="lg-item" style="width:100%;" data-src="img/work/lucky_sticker/2.gif">
 								<img src="img/work/lucky_sticker/2.webp" />
 							</a>
 						</div>
 						<div class="inner-image">
-							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/3.gif">
+							<a class="lg-item" style="width:100%;" data-src="img/work/lucky_sticker/3.gif">
 								<img src="img/work/lucky_sticker/3.webp" />
 							</a>
 						</div>
 						<div class="inner-image">
-							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/4.gif">
+							<a class="lg-item" style="width:100%;" data-src="img/work/lucky_sticker/4.gif">
 								<img src="img/work/lucky_sticker/4.webp" />
 							</a>
 						</div>
 						<div class="inner-image">
-							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/5.gif">
+							<a class="lg-item" style="width:100%;" data-src="img/work/lucky_sticker/5.gif">
 								<img src="img/work/lucky_sticker/5.webp" />
 							</a>
 						</div>
 						<div class="inner-image">
-							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/6.gif">
+							<a class="lg-item" style="width:100%;" data-src="img/work/lucky_sticker/6.gif">
 								<img src="img/work/lucky_sticker/6.webp" />
 							</a>
 						</div>
 						<div class="inner-image">
-							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/7.gif">
+							<a class="lg-item" style="width:100%;" data-src="img/work/lucky_sticker/7.gif">
 								<img src="img/work/lucky_sticker/7.webp" />
 							</a>
 						</div>
 						<div class="inner-image">
-							<a class="cbox" style="width:100%;" href="img/work/lucky_sticker/8.gif">
+							<a class="lg-item" style="width:100%;" data-src="img/work/lucky_sticker/8.gif">
 								<img src="img/work/lucky_sticker/8.webp" />
 							</a>
 						</div>
