Added blizzcon project

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
 
 				<div class="gallery-container">
 
-					<!--
 
-					<button class="gallery-button" onclick="richOverlay.open(1);">
+
+					<button class="gallery-button" onclick="richOverlay.open(7);">
 						<div class="label-overlay">
 							<div class="label">
 								<h1>Blizzcon 2019</h1>
 								<h2>Web + Event Display</h2>
 							</div>
 						</div>
-						<img src="img/gallery/msi-bh-comic.jpg" />
+						<img src="img/gallery/bc-2019.jpg" />
 					</button>
 
-				-->
+
 
 				<button class="gallery-button" onclick="richOverlay.open(6);">
 					<div class="label-overlay">
