--- a/work.html
+++ b/work.html
@@ -342,4 +342,67 @@
 
 
 
+				<div class="rich-overlay-content">
+					<div class="content-inner">
+						<div class="light-gallery">
+							<a class="lg-item" style="width:100%;" data-src="img/work/bc_2019/key-1600.jpg">
+								<img src="img/work/bc_2019/key-1280.jpg" />
+							</a>
+							<div class="content-info-outer">
+								<div class="content-info">
+									<h1>BlizzCon 2019</h1>
+									<h2>Graphic Design - MSI, Activision Blizzard</h2>
+									<p>
+										I created promotional web and booth graphics for MSI's participation in BlizzCon 2019.
+									</p>
+								</div>
+							</div>
+
+							<div class="inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/bc_2019/treatments-1600.jpg">
+									<img src="img/work/bc_2019/treatments-1280.jpg" />
+								</a>
+							</div>
+
+							<div class="inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/bc_2019/booth-1-1600.jpg">
+									<img src="img/work/bc_2019/booth-1-1280.jpg" />
+								</a>
+							</div>
+
+							<div class="inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/bc_2019/booth-2-1600.jpg">
+									<img src="img/work/bc_2019/booth-2-1280.jpg" />
+								</a>
+							</div>
+
+							<div class="clearfix inner-image" style="padding-bottom:0;">
+								<div style="width:49%; float:left;">
+									<a class="lg-item" data-src="img/work/bc_2019/photo-1-1280.jpg">
+										<img src="img/work/bc_2019/photo-1-640.jpg" />
+									</a>
+								</div>
+								<div style="width:49%; float:right; ">
+									<a class="lg-item" data-src="img/work/bc_2019/photo-2-1280.jpg">
+										<img src="img/work/bc_2019/photo-2-640.jpg" />
+									</a>
+								</div>
+							</div>
+
+
+						</div>
+
+					</div>
+					<div class="content-footer-outer">
+						<div class="content-footer">
+							<p class="note">
+								MSI gaming dragon shield logo, product photos, and product model name logos are trademarks of MSI.
+								Character Art provided by Blizzard Entertainment, Inc.
+							</p>
+						</div>
+					</div>
+				</div>
+
+
+
 </html>
