social project added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
 
 				<div class="gallery-container">
 
-
+					<button class="gallery-button" onclick="richOverlay.open(8);">
+						<div class="label-overlay">
+							<div class="label">
+								<h1>MSI Social Media</h1>
+								<h2>Product Graphics</h2>
+							</div>
+						</div>
+						<img src="img/gallery/msi_socials.jpg" />
+					</button>
 
 					<button class="gallery-button" onclick="richOverlay.open(7);">
 						<div class="label-overlay">
