--- a/work.html
+++ b/work.html
@@ -404,5 +404,61 @@
 				</div>
 
 
+				<div class="rich-overlay-content">
+
+					<div class="content-inner">
+						<div class="light-gallery">
+
+							<div class="content-info-outer">
+								<div class="content-info">
+									<h1>MSI Assorted Social Media </h1>
+									<h2>Graphic Design - MSI</h2>
+									<p>
+										Here is an assortment of product-focused social media graphics I've created for MSI.
+									</p>
+								</div>
+							</div>
+							<div class="inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:800px;" data-src="img/work/msi_socials/social-1-1200.jpg">
+									<img src="img/work/msi_socials/social-1-800.jpg" />
+								</a>
+							</div>
+
+							<div class="inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:800px;" data-src="img/work/msi_socials/social-2-1200.jpg">
+									<img src="img/work/msi_socials/social-2-800.jpg" />
+								</a>
+							</div>
+
+							<div class="inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:800px;" data-src="img/work/msi_socials/social-3-1200.jpg">
+									<img src="img/work/msi_socials/social-3-800.jpg" />
+								</a>
+							</div>
+
+							<div class="inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:800px;" data-src="img/work/msi_socials/social-4-1200.jpg">
+									<img src="img/work/msi_socials/social-4-800.jpg" />
+								</a>
+							</div>
+
+							<div class="inner-image">
+								<a class="lg-item white-border" style="width:100%; max-width:800px;" data-src="img/work/msi_socials/social-5-1200.jpg">
+									<img src="img/work/msi_socials/social-5-800.jpg" />
+								</a>
+							</div>
+
+						</div>
+					</div>
+					<div class="content-footer-outer">
+						<div class="content-footer">
+							<p class="note">
+								MSI gaming dragon shield logo, product photos, and product model name logos are trademarks of MSI.
+							</p>
+						</div>
+					</div>
+				</div>
+
+
 
 </html>
