--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="description" content="Rich Huynh - Designer + Developer">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Rich Huynh - Designer + Developer</title>
+		<link rel="shortcut icon" type="image/jpg" href="img/rh-favicon.png"/>
 
 
 		<!--LightGallery-->
@@ -52,7 +53,7 @@
 								<h2>Product Graphics</h2>
 							</div>
 						</div>
-						<img src="img/gallery/msi_socials.jpg" />
+						<img src="img/gallery/msi_socials.jpg" alt="Colorful Laptop Graphic" />
 					</button>
 
 					<button class="gallery-button" onclick="richOverlay.open(7);">
@@ -62,7 +63,7 @@
 								<h2>Web + Event Display</h2>
 							</div>
 						</div>
-						<img src="img/gallery/bc-2019.jpg" />
+						<img src="img/gallery/bc-2019.jpg" alt="MSI BlizzCon Product Graphic" />
 					</button>
 
 
@@ -74,7 +75,7 @@
 							<h2>Animated GIFs</h2>
 						</div>
 					</div>
-					<img src="img/gallery/lucky-sticker.jpg" />
+					<img src="img/gallery/lucky-sticker.jpg" alt="MSI Lucky Powering Up" />
 				</button>
 
 					<button class="gallery-button" onclick="richOverlay.open(5);">
@@ -84,7 +85,7 @@
 								<h2>Marketing Materials</h2>
 							</div>
 						</div>
-						<img src="img/gallery/msi-fanday.jpg" />
+						<img src="img/gallery/msi-fanday.jpg" alt="MSI Fan Day Boat Graphic" />
 					</button>
 
 					<button class="gallery-button" onclick="richOverlay.open(4);">
@@ -94,7 +95,7 @@
 								<h2>Poster</h2>
 							</div>
 						</div>
-						<img src="img/gallery/msi-bh-comic.jpg" />
+						<img src="img/gallery/msi-bh-comic.jpg" alt="MSI Super Power Laptops" />
 					</button>
 
 
@@ -105,7 +106,7 @@
 								<h2>Brand Materials</h2>
 							</div>
 						</div>
-						<img src="img/gallery/reach-brochure.jpg" />
+						<img src="img/gallery/reach-brochure.jpg" alt="Reach - We Help Foster Youth" />
 					</button>
 
 
@@ -116,7 +117,7 @@
 								<h2>Digital Illustration</h2>
 							</div>
 						</div>
-						<img src="img/gallery/dino-poster.jpg" />
+						<img src="img/gallery/dino-poster.jpg" alt="T-Rex Head" />
 					</button>
 					<button class="gallery-button" onclick="richOverlay.open(1);">
 						<div class="label-overlay">
@@ -125,7 +126,7 @@
 								<h2>Event Flyers</h2>
 							</div>
 						</div>
-						<img src="img/gallery/reach-flyers.jpg" />
+						<img src="img/gallery/reach-flyers.jpg" alt="Reach Presents - Can You Hear Me?" />
 					</button>
 					<button class="gallery-button" onclick="richOverlay.open(0);">
 						<div class="label-overlay">
@@ -134,7 +135,7 @@
 								<h2>T-Shirt Design</h2>
 							</div>
 						</div>
-						<img src="img/gallery/water-shirt.jpg" />
+						<img src="img/gallery/water-shirt.jpg" alt="Skull Factory Monster Design"/>
 					</button>
 				</div>
 
