--- a/work.html
+++ b/work.html
@@ -359,19 +359,19 @@
 							</div>
 
 							<div class="inner-image">
-								<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/bc_2019/treatments-1600.jpg">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/bc_2019/treatments-1600.jpg">
 									<img src="img/work/bc_2019/treatments-1280.jpg" />
 								</a>
 							</div>
 
 							<div class="inner-image">
-								<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/bc_2019/booth-1-1600.jpg">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/bc_2019/booth-1-1600.jpg">
 									<img src="img/work/bc_2019/booth-1-1280.jpg" />
 								</a>
 							</div>
 
 							<div class="inner-image">
-								<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/bc_2019/booth-2-1600.jpg">
+								<a class="lg-item white-border" style="width:100%; max-width:1280px;" data-src="img/work/bc_2019/booth-2-1600.jpg">
 									<img src="img/work/bc_2019/booth-2-1280.jpg" />
 								</a>
 							</div>
@@ -419,31 +419,31 @@
 								</div>
 							</div>
 							<div class="inner-image">
-								<a class="lg-item white-border" style="width:100%; max-width:800px;" data-src="img/work/msi_socials/social-1-1200.jpg">
+								<a class="lg-item white-border" style="width:100%; max-width:800px; margin-bottom:40px;" data-src="img/work/msi_socials/social-1-1200.jpg">
 									<img src="img/work/msi_socials/social-1-800.jpg" />
 								</a>
 							</div>
 
 							<div class="inner-image">
-								<a class="lg-item white-border" style="width:100%; max-width:800px;" data-src="img/work/msi_socials/social-2-1200.jpg">
+								<a class="lg-item white-border" style="width:100%; max-width:800px; margin-bottom:40px;" data-src="img/work/msi_socials/social-2-1200.jpg">
 									<img src="img/work/msi_socials/social-2-800.jpg" />
 								</a>
 							</div>
 
 							<div class="inner-image">
-								<a class="lg-item white-border" style="width:100%; max-width:800px;" data-src="img/work/msi_socials/social-3-1200.jpg">
+								<a class="lg-item white-border" style="width:100%; max-width:800px; margin-bottom:40px;" data-src="img/work/msi_socials/social-3-1200.jpg">
 									<img src="img/work/msi_socials/social-3-800.jpg" />
 								</a>
 							</div>
 
 							<div class="inner-image">
-								<a class="lg-item white-border" style="width:100%; max-width:800px;" data-src="img/work/msi_socials/social-4-1200.jpg">
+								<a class="lg-item white-border" style="width:100%; max-width:800px; margin-bottom:40px;" data-src="img/work/msi_socials/social-4-1200.jpg">
 									<img src="img/work/msi_socials/social-4-800.jpg" />
 								</a>
 							</div>
 
 							<div class="inner-image">
-								<a class="lg-item white-border" style="width:100%; max-width:800px;" data-src="img/work/msi_socials/social-5-1200.jpg">
+								<a class="lg-item white-border" style="width:100%; max-width:800px; margin-bottom:40px;" data-src="img/work/msi_socials/social-5-1200.jpg">
 									<img src="img/work/msi_socials/social-5-800.jpg" />
 								</a>
 							</div>
